# qonnx

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  README.md  README.rst  SIRA-README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  pre-commit.yml  pypi-publish.yml  test.yml  testpypi-publish.yml
docs/: .readthedocs.yml  changelog.rst  conf.py  index.rst  license.rst  overview.rst  readme.rst  requirements.txt  tutorials.rst
docs/_templates/apidoc/: module.rst_t  package.rst_t  toc.rst_t
docs/qkeras-converter/: qkeras_to_qonnx.md
docs/qonnx-custom-ops/: bipolar_quant_op.md  bipolarquant_v1.md  floatquant_op.md  floatquant_v1.md  intquant_op.md  intquant_v1.md  overview.md  quant_op.md  trunc_op.md  trunc_v1.md  trunc_v2.md
notebooks/: 0_how_to_work_with_onnx.ipynb  1_custom_analysis_pass.ipynb  2_custom_transformation_pass.ipynb  3_custom_op.ipynb  4_hgq_to_qonnx.ipynb  4_quant_lstm.ipynb  5_hgq_to_qonnx.ipynb  README.md
notebooks/4_quant_lstm_helper/: function.py  handler.py
src/qonnx/: __init__.py
src/qonnx/analysis/: base.py  inference_cost.py  l0_resource_estimates.py  l1_resource_estimates.py  tensor_stats.py  topology.py
src/qonnx/converters/: __init__.py  keras.py
src/qonnx_frontend/: __init__.py  skeleton.py
tests/: conftest.py  model_test_keras_conv2d_conversion.onnx  model_test_keras_dense_conversion.onnx  model_test_qkeras_qactivation_0.onnx  model_test_qkeras_qactivation_1.onnx  model_test_qkeras_qactivation_10.onnx  model_test_qkeras_qactivation_11.onnx  model_test_qkeras_qactivation_12.onnx  model_test_qkeras_qactivation_13.onnx  model_test_qkeras_qactivation_14.onnx  model_test_qkeras_qactivation_15.onnx  model_test_qkeras_qactivation_16.onnx  model_test_qkeras_qactivation_2.onnx  model_test_qkeras_qactivation_3.onnx  model_test_qkeras_qactivation_4.onnx  model_test_qkeras_qactivation_5.onnx  model_test_qkeras_qactivation_6.onnx  model_test_qkeras_qactivation_7.onnx  model_test_qkeras_qactivation_8.onnx  model_test_qkeras_qactivation_9.onnx  model_test_qkeras_qconv2d_0.onnx  model_test_qkeras_qconv2d_1.onnx  model_test_qkeras_qconv2d_10.onnx  model_test_qkeras_qconv2d_11.onnx  model_test_qkeras_qconv2d_12.onnx  model_test_qkeras_qconv2d_2.onnx  model_test_qkeras_qconv2d_3.onnx  model_test_qkeras_qconv2d_4.onnx  model_test_qkeras_qconv2d_5.onnx  model_test_qkeras_qconv2d_6.onnx  model_test_qkeras_qconv2d_7.onnx  model_test_qkeras_qconv2d_8.onnx  model_test_qkeras_qconv2d_9.onnx  model_test_qkeras_qconv2d_conversion.onnx  model_test_qkeras_qdense2_0.onnx  model_test_qkeras_qdense2_1.onnx  model_test_qkeras_qdense2_10.onnx  model_test_qkeras_qdense2_11.onnx  model_test_qkeras_qdense2_12.onnx  model_test_qkeras_qdense2_2.onnx  (+28 more)
tests/HGQ/: test_hgq.py
tests/analysis/: test_inference_cost.py  test_inference_cost_breakdown.py  test_is_linear.py  test_l0_resource_estimates.py  test_l1_resource_estimates.py  test_matmul_mac_cost.py  test_range_analysis.py  test_topology_checks.py
tests/core/: test_basic_onnx_exec.py  test_custom_onnx_exec.py  test_datatypes.py  test_mixed_onnx_exec.py  test_modelwrapper.py  test_subgraph_traversal.py
tests/custom_op/: legacy_custom_op.py  test_attr.py  test_customop_version.py  test_floatquant.py  test_im2col.py  test_multithreshold.py  test_old_domain.py  test_runding_mode.py  test_xnorpopcountmatmul.py
tests/custom_ops/: test_ChannelsLast_ops.py
tests/keras/: test_keras_convert.py
tests/transformation/: test_4d_conversion.py  test_batchnorm_to_affine.py  test_change_batchsize.py  test_change_datalayout.py  test_channelslast.py  test_channelslast_eltwise.py  test_channelslast_residual.py  test_conv_lowering.py  test_duplicate_forking.py  test_expose_intermediate.py  test_extend_partition.py  test_extract_conv_bias.py  test_extract_quant_scale_zeropt.py  test_fill_empty_roi.py  test_fixedpt_quantize.py  test_fold_constants.py  test_general_transformation.py  test_generic_partitioning.py  test_infer_data_layouts.py  test_infer_datatypes.py  test_infer_shapes.py  test_insert_identity.py  test_introduce_quantnode.py  test_make_input_chanlast.py  test_merge_onnx_models.py  test_move_dq_past_op.py  test_nn_resize_to_deconv.py  test_nodelocal_transform.py  test_pruning.py  test_qcdq_to_qonnx.py  test_qcdq_to_qop.py  test_qonnx_cleanup.py  test_qonnx_to_qcdq.py  test_quant_constant_folding.py  test_quantize_graph.py  test_rebalance_conv.py  test_remove_identity_ops.py  test_remove_unused.py  test_renaming.py  test_sort_commutative_inputs_initializer_last.py  (+4 more)
tests/transformations/: test_ChannelsLast.py  test_channelslast.py
tests/util/: random_reseed.py  test_config.py  test_copy_metadata.py  test_gen_finn_dt_tensor.py  test_l0_performance_estimate.py  test_matvec_range.py  test_padding.py  test_shape_utils.py
(+146 files in other folders)
