# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = qonnx
description = Frontend and utilities for QONNX
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/fastmachinelearning/qonnx
# Add here related links, for example:
project_urls =
    Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.10

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata
    attrs>=22.2.0
    clize>=5.0.1
    protobuf==3.20.3
    bitstring>=3.1.7
    numpy>=1.24.1
    onnx>=1.13.0
    onnxruntime>=1.16.1
    onnxscript>=0.1.0
    sigtools>=4.0.1
    toposort>=1.7.0


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install qonnx[PDF]` like:
# PDF = ReportLab; RXP
# Note: tf2onnx 1.12.1 is the first version that supports numpy 1.24.1
# Note: pyparsing is actually needed by QKeras, but missing as dependency
qkeras =
    pyparsing
    tf2onnx>=1.16.1
    tensorflow>=2.9.0, <=2.14.1
    QKeras>=0.9.0

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-xdist
    pytest-cov
    pytest-randomly
    hypothesis
    mock

brevitas =
    brevitas>=0.11.0

notebooks =
    jupyter
    netron

[options.entry_points]
console_scripts =
    qonnx-cleanup = qonnx.util.cleanup:main
    qonnx-exec = qonnx.util.exec_qonnx:main
    qonnx-to-channels-last = qonnx.util.to_channels_last:main
    qonnx-inference-cost = qonnx.util.inference_cost:main
    qonnx-convert = qonnx.util.convert:main
    qonnx-range-analysis = qonnx.util.range_analysis:main
    qonnx-prune-channels = qonnx.util.prune_channels:main
    qonnx-download-model = qonnx.util.test:qonnx_download_model
    qonnx-tensor-stats = qonnx.analysis.tensor_stats:main
pytest_randomly.random_seeder =
    qonnx = qonnx.util.random_reseed:reseed
# Add here console scripts like:
# console_scripts =
#     script_name = qonnx.module:function
# For example:
# console_scripts =
#     fibonacci = qonnx.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 125
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.2
package = qonnx
extensions =
